--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 ---
 layout: page
-title: Plain old hacking blog!
-description: "Open Source Hacker, Web Developer and a overall nice guy."
-tags: [Jekyll, theme, themes, responsive, Blog, minimalism]
+title: Jipio
+description: "Deel spullen met vrienden"
+tags: [Jipio, spullen, vrienden]
 ---
 
-<ul class="unstyled left-side">
-{% for post in site.posts limit:10 %} 
-  <li><article><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</article></li>
-{% endfor %}
-</ul>
+<section class="content-4">
+    <div class="container">
+        <h3>We love what we do. This is features of our products</h3>
+        <div class="row features">
+            <div class="span4">
+                <img src="{{site.assets}}common-files/icons/retina-ready-s@2x.png" alt="" width="117" height="104">
+                <h6>Block Model</h6>
+                <p>You can easily combine any components in a variety of design projects. It’s easy!</p>
+            </div>
+            <div class="span4">
+                <img src="{{site.assets}}common-files/icons/clock@2x.png" alt="" width="104" height="104">
+                <h6>Multi-components</h6>
+                <p>There are a lot of different blocks that will help you to make a perfect project.</p>
+            </div>
+            <div class="span4">
+                <img src="{{site.assets}}common-files/icons/rocket@2x.png" alt="" width="101" height="101">
+                <h6>Save Your Time</h6>
+                <p>Use your time for generating new ideas for your startup. Take a break from the routine.</p>
+            </div>
+        </div>
+    </div>
+</section>
