Title and paths

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ tags: [Jipio, share, stuff, friends]
                         </p>
                     </div>
                     <div class="span6" style="opacity: 0;">
-                        <img class="pull-right nosvg" src="../../common-files/icons/rocket-big@2x.png" alt="" width="402" height="401">
+                        <img class="pull-right nosvg" src="{{site.assets}}common-files/icons/rocket-big@2x.png" alt="" width="402" height="401">
                         <span class="pull-right svg">
                             <svg version="1.1" id="spaceship" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="402px" height="401px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
                                 <circle id="bg" fill="#dfe1e2" cx="50" cy="50" r="50"></circle>
@@ -66,64 +66,64 @@ tags: [Jipio, share, stuff, friends]
                         <div class="description-top">
                             <h6>Easy to use</h6>
                             To get started, you select the desired sample and base the entire website on it.
-                            <img src="../../common-files/img/content/arrow-tl@2x.png" width="61" height="97" alt="">
+                            <img src="{{site.assets}}common-files/img/content/arrow-tl@2x.png" width="61" height="97" alt="">
                         </div>
                         <div class="img">
-                            <img src="../../common-files/img/content/screen-1-bw@2x.png" width="220" height="391" alt="">
-                            <img src="../../common-files/img/content/screen-1@2x.png" width="220" height="391" alt="">
+                            <img src="{{site.assets}}common-files/img/content/screen-1-bw@2x.png" width="220" height="391" alt="">
+                            <img src="{{site.assets}}common-files/img/content/screen-1@2x.png" width="220" height="391" alt="">
                         </div>
                         <div class="description-bottom">
                             <h6>Variety of designs</h6>
                             Without iconic symbolsreally finish your work - for clearly understand.
-                            <img src="../../common-files/img/content/arrow-bl@2x.png" width="97" height="110" alt="">
+                            <img src="{{site.assets}}common-files/img/content/arrow-bl@2x.png" width="97" height="110" alt="">
                         </div>
                     </div>
                     <div class="span3 box-2">
                         <div class="description-top">
                             <h6>Easy to use</h6>
                             To get started, you select the desired sample and base the entire website on it.
-                            <img src="../../common-files/img/content/arrow-tl@2x.png" width="61" height="97" alt="">
+                            <img src="{{site.assets}}common-files/img/content/arrow-tl@2x.png" width="61" height="97" alt="">
                         </div>
                         <div class="img">
-                            <img src="../../common-files/img/content/screen-2-bw@2x.png" width="220" height="391" alt="">
-                            <img src="../../common-files/img/content/screen-2@2xc-30.png" width="220" height="391" alt="">
+                            <img src="{{site.assets}}common-files/img/content/screen-2-bw@2x.png" width="220" height="391" alt="">
+                            <img src="{{site.assets}}common-files/img/content/screen-2@2xc-30.png" width="220" height="391" alt="">
                         </div>
                         <div class="description-bottom">
                             <h6>Variety of designs</h6>
                             Responsive web design is a web design approach aimed to provide crafting sites.
-                            <img src="../../common-files/img/content/arrow-br@2x.png" width="97" height="110" alt="">
+                            <img src="{{site.assets}}common-files/img/content/arrow-br@2x.png" width="97" height="110" alt="">
                         </div>
                     </div>
                     <div class="span3 box-3">
                         <div class="description-top">
                             <h6>Easy to use</h6>
                             To get started, you select the desired sample and base the entire website on it.
-                            <img src="../../common-files/img/content/arrow-tr@2x.png" width="61" height="97" alt="">
+                            <img src="{{site.assets}}common-files/img/content/arrow-tr@2x.png" width="61" height="97" alt="">
                         </div>
                         <div class="img">
-                            <img src="../../common-files/img/content/screen-3-bw@2x.png" width="220" height="391" alt="">
-                            <img src="../../common-files/img/content/screen-3@2x.png" width="220" height="391" alt="">
+                            <img src="{{site.assets}}common-files/img/content/screen-3-bw@2x.png" width="220" height="391" alt="">
+                            <img src="{{site.assets}}common-files/img/content/screen-3@2x.png" width="220" height="391" alt="">
                         </div>
                         <div class="description-bottom">
                             <h6>Variety of designs</h6>
                             Responsive web design is a web design approach aimed to provide crafting sites.
-                            <img src="../../common-files/img/content/arrow-bl@2x.png" width="97" height="110" alt="">
+                            <img src="{{site.assets}}common-files/img/content/arrow-bl@2x.png" width="97" height="110" alt="">
                         </div>
                     </div>
                     <div class="span3 box-4">
                         <div class="description-top">
                             <h6>Quick Navigation</h6>
                             Without iconic symbolsreally finish your work - for clearly understand.
-                            <img src="../../common-files/img/content/arrow-tr@2x.png" width="61" height="97" alt="">
+                            <img src="{{site.assets}}common-files/img/content/arrow-tr@2x.png" width="61" height="97" alt="">
                         </div>
                         <div class="img">
-                            <img src="../../common-files/img/content/screen-4-bw@2x.png" width="220" height="391" alt="">
-                            <img src="../../common-files/img/content/screen-4@2x.png" width="220" height="391" alt="">
+                            <img src="{{site.assets}}common-files/img/content/screen-4-bw@2x.png" width="220" height="391" alt="">
+                            <img src="{{site.assets}}common-files/img/content/screen-4@2x.png" width="220" height="391" alt="">
                         </div>
                         <div class="description-bottom">
                             <h6>Variety of designs</h6>
                             Responsive web design is a web design approach aimed to provide crafting sites.
-                            <img src="../../common-files/img/content/arrow-br@2x.png" width="97" height="110" alt="">
+                            <img src="{{site.assets}}common-files/img/content/arrow-br@2x.png" width="97" height="110" alt="">
                         </div>
                     </div>
                 </div>
@@ -172,8 +172,8 @@ tags: [Jipio, share, stuff, friends]
                             how to play around using the components in the website building process.</p>
                         <div class="box">
                             <div class="img">
-                                <img src="../../common-files/img/content/ticket-navy-bw@2x.png" width="380" height="187" alt="">
-                                <img src="../../common-files/img/content/ticket-navy@2x.png" width="380" height="187" alt="">
+                                <img src="{{site.assets}}common-files/img/content/ticket-navy-bw@2x.png" width="380" height="187" alt="">
+                                <img src="{{site.assets}}common-files/img/content/ticket-navy@2x.png" width="380" height="187" alt="">
                             </div>
                         </div>
                     </div>
@@ -188,8 +188,8 @@ tags: [Jipio, share, stuff, friends]
                                     buttons, inputs, button groups, selects, checkboxes and radio-buttons, tags.</p>
                                 <div class="box">
                                     <div class="img">
-                                        <img src="../../common-files/img/content/map-bw@2x.png" width="380" height="179" alt="">
-                                        <img src="../../common-files/img/content/map@2x.png" width="380" height="179" alt="">
+                                        <img src="{{site.assets}}common-files/img/content/map-bw@2x.png" width="380" height="179" alt="">
+                                        <img src="{{site.assets}}common-files/img/content/map@2x.png" width="380" height="179" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -200,8 +200,8 @@ tags: [Jipio, share, stuff, friends]
                                     Framework are Samples and the UI Kit that includes a set of different components. </p>
                                 <div class="box">
                                     <div class="img">
-                                        <img src="../../common-files/img/content/ps-wire-imac-bw@2x.png" width="397" height="193" alt="">
-                                        <img src="../../common-files/img/content/ps-wire-imac@2x.png" width="397" height="193" alt="">
+                                        <img src="{{site.assets}}common-files/img/content/ps-wire-imac-bw@2x.png" width="397" height="193" alt="">
+                                        <img src="{{site.assets}}common-files/img/content/ps-wire-imac@2x.png" width="397" height="193" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -212,8 +212,8 @@ tags: [Jipio, share, stuff, friends]
                                     address. </p>
                                 <div class="box">
                                     <div class="img">
-                                        <img src="../../common-files/img/content/ticket-navy-bw@2x.png" width="380" height="187" alt="">
-                                        <img src="../../common-files/img/content/ticket-navy@2x.png" width="380" height="187" alt="">
+                                        <img src="{{site.assets}}common-files/img/content/ticket-navy-bw@2x.png" width="380" height="187" alt="">
+                                        <img src="{{site.assets}}common-files/img/content/ticket-navy@2x.png" width="380" height="187" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -234,8 +234,8 @@ tags: [Jipio, share, stuff, friends]
                                     buttons, inputs, button groups, selects, checkboxes and radio-buttons, tags.</p>
                                 <div class="box">
                                     <div class="img">
-                                        <img src="../../common-files/img/content/ps-wire-imac-bw@2x.png" width="397" height="193" alt="">
-                                        <img src="../../common-files/img/content/ps-wire-imac@2x.png" width="397" height="193" alt="">
+                                        <img src="{{site.assets}}common-files/img/content/ps-wire-imac-bw@2x.png" width="397" height="193" alt="">
+                                        <img src="{{site.assets}}common-files/img/content/ps-wire-imac@2x.png" width="397" height="193" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -245,8 +245,8 @@ tags: [Jipio, share, stuff, friends]
                                     buttons, inputs, button groups, selects, checkboxes and radio-buttons, tags.</p>
                                 <div class="box">
                                     <div class="img">
-                                        <img src="../../common-files/img/content/ticket-navy-bw@2x.png" width="380" height="187" alt="">
-                                        <img src="../../common-files/img/content/ticket-navy@2x.png" width="380" height="187" alt="">
+                                        <img src="{{site.assets}}common-files/img/content/ticket-navy-bw@2x.png" width="380" height="187" alt="">
+                                        <img src="{{site.assets}}common-files/img/content/ticket-navy@2x.png" width="380" height="187" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -256,8 +256,8 @@ tags: [Jipio, share, stuff, friends]
                                     buttons, inputs, button groups, selects, checkboxes and radio-buttons, tags.</p>
                                 <div class="box">
                                     <div class="img">
-                                        <img src="../../common-files/img/content/map-bw@2x.png" width="380" height="179" alt="">
-                                        <img src="../../common-files/img/content/map@2x.png" width="380" height="179" alt="">
+                                        <img src="{{site.assets}}common-files/img/content/map-bw@2x.png" width="380" height="179" alt="">
+                                        <img src="{{site.assets}}common-files/img/content/map@2x.png" width="380" height="179" alt="">
                                     </div>
                                 </div>
                             </div>
