--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: Jipio
-description: "Share stuff with friends. Help others with usefull stuff."
-tags: [Jipio, share, stuff, friends]
+description: "Share stuff with friends. Help others with useful stuff."
+tags: [Jipio, share, stuff, friends, help, others]
 ---
 
         <section class="content-25 bg-clouds">
