--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Jipio
-description: "Share stuff with friends. Help others with useful stuff."
+description: "Share stuff with friends. Help others."
 tags: [Jipio, share, stuff, friends, help, others]
 ---
 
