--- a/index.html
+++ b/index.html
@@ -271,6 +271,14 @@ tags: [Jipio, share, stuff, friends, help, others]
             </div>
         </section>
 
+<section class="content-36">
+    <div class="container">
+        <h2>We’ve created the product that will help your startup to look even better</h2>
+        <a class="btn btn-success" href="#">Buy Now</a>
+        <p>You can decide whether to create your site using UI Kit blocks or samples</p>
+    </div>
+</section>
+
         <section class="contacts-4">
             <div class="container">
                 <div class="content">
@@ -287,12 +295,6 @@ tags: [Jipio, share, stuff, friends, help, others]
                             <div class="fui-vimeo"></div>
                             
                         </a>
-                    </div>
-                    <h3>Get in touch with us</h3>
-                    <p>As a Harvard professor, he was one of the first to <br class="hidden-phone"> explore the relationship in
-                        equilibrium.</p>
-                    <div class="links">
-                        <a href="mailto:{{site.email}}">{{site.email}}</a>
                     </div>
                 </div>
             </div>
