--- a/index.html
+++ b/index.html
@@ -77,39 +77,7 @@ tags: [Jipio, share, stuff, friends, help, others]
             </div>
         </section>
         
-        <section class="content-32">
-    <div class="container">
-        <div class="row">
-            <div class="span8 offset2">
-                <h3>Documentation</h3>
-                <p class="lead">The most important parts of the Startup Framework are Samples and the UI Kit that
-                    includes a set of different components. The samples consist of a set of 25 pages. Each of these
-                    pages you can use as-is or with new blocks from a UI Kit.</p>
-            </div>
-        </div>
-    </div>
-    <div class="features">
-        <div class="container">
-            <div class="row">
-                <div class="span3">
-                    <h6>High Resolution</h6>
-                    We did a 2.5K size high resolution photo that will suit even for a very large web site.
-                </div>
-                <div class="span4 offset1">
-                    <h6>Easy to Use</h6>
-                    Blocks fixed to 12 Grid system. It allows you to find understanding between the designer and
-                    developer.
-                </div>
-                <div class="span3 offset1">
-                    <h6>Many Components</h6>
-                    To get started, you select the desired sample and base the entire website on it.
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-        <section class="content-35">
+             <section class="content-35">
             <div class="background">
                 <div class="container">
                     <div class="row">
@@ -141,6 +109,13 @@ tags: [Jipio, share, stuff, friends, help, others]
             </div>
         </section>
 
+<section class="content-29">
+    <div class="container">
+        <div class="player">
+            <iframe id="pPlayer" src="http://player.vimeo.com/video/80282064?title=0&amp;byline=0&amp;portrait=0&amp;api=1&amp;player_id=pPlayer" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+        </div>
+    </div>
+</section>
        
 
 <section class="content-36">
