--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@ tags: [Jipio, share, stuff, friends, help, others]
             </div>
         </section>
 
+ <section class="content-23 v-center bg-midnight-blue">
+            <div>
+                <div class="container">
+                    <div class="hero-unit hero-unit-bordered">
+                <h1>Made in New York</h1>
+            </div>
+        </div>
+    </div>
+    <a class="control-btn fui-arrow-down" href="#"> </a>
+</section>
+
 <section class="content-29">
     <div class="container">
         <div class="player">
@@ -116,12 +127,10 @@ tags: [Jipio, share, stuff, friends, help, others]
         </div>
     </div>
 </section>
-       
 
-<section class="content-36">
+<section class="content-33">
     <div class="container">
-        <h2>We’ve created the product that will help your startup to look even better</h2>
-        <a class="btn btn-success" href="#">Buy Now</a>
-        <p>You can decide whether to create your site using UI Kit blocks or samples</p>
+        <p class="lead">Documentation is really important for a developer. Right from it you get to know the product. We
+            tried to describe all the components and provide the set-up instructions.</p>
     </div>
-
+</section>
