--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@ tags: [Jipio, share, stuff, friends, help, others]
                 </div>
             </div>
         </section>
+        
+          <section class="content-33">
+                <div class="container">
+                        <p class="lead">Documentation is really important for a developer. Right from it you get to know the product. We
+            tried to describe all the components and provide the set-up instructions.</p>
+    </div>
+        </section>
 
  <section class="content-23 v-center bg-midnight-blue">
             <div>
