--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ tags: [Jipio, share, stuff, friends, help, others]
 
         <section class="content-33">
                 <div class="container">
-                        <p class="lead">Documentation is really important for a developer. Right from it you get to know the product. We
-            tried to describe all the components and provide the set-up instructions.</p>
+                        <p class="lead">Jipio is an app that lets you share and trade your stuff with friends. Together, we own it.</p>
     </div>
         </section>
 
@@ -16,7 +15,7 @@ tags: [Jipio, share, stuff, friends, help, others]
             <div>
                 <div class="container">
                     <div class="hero-unit hero-unit-bordered">
-                <h1>Made in New York</h1>
+                <h1>Share and trade with friends</h1>
             </div>
         </div>
     </div>
@@ -27,7 +26,7 @@ tags: [Jipio, share, stuff, friends, help, others]
             <div class="container">
                 <div class="row">
                     <div class="span6">
-                        <h3>The Second Sneak-Peek of Startup Design Framework</h3>
+                        <h3>Help each other, share what you have!</h3>
                         <p>
                             The most important parts of the Startup Framework are Samples and the UI Kit that includes a
                             set of different components. The samples consist of a set of 25 pages.
@@ -90,18 +89,18 @@ tags: [Jipio, share, stuff, friends, help, others]
             <div class="container">
                 <div class="row">
                     <div class="span5 offset5">
-                        <h2>Features</h2>
-                        <p class="lead">The most important parts of the Startup Framework are Samples and the UI Kit that
-                            includes a set of different components. The samples consist of a set of 25 pages. </p>
-                        <a href="#" class="btn btn-inverse">Buy Now</a>
+                        <h2>Remember</h2>
+                        <p class="lead">Jipio tracks what friends have borrowed from you and automatically send a message when it is time to bring the item back.
+                            You do not have to worry about your book anymore. </p>
+                        <a href="#" class="btn btn-inverse">Planning</a>
                         <div class="row columns">
                             <div class="span2">
-                                <h3>Smart Layers</h3>
-                                <p>Just put the image with your App screen inside Smart Layer and get the photo.</p>
+                                <h3>Smart scheduling</h3>
+                                <p>Just schedule a date to pick it up and to give it back. </p>
                             </div>
                             <div class="span2 offset1">
-                                <h3>Video Tutorials</h3>
-                                <p>Video tutorials show you how to make a site from design to code. </p>
+                                <h3>More fun!</h3>
+                                <p>Borrowing something is more fun if you do not have to worry about the rest.</p>
                             </div>
                         </div>
                     </div>
@@ -174,7 +173,7 @@ tags: [Jipio, share, stuff, friends, help, others]
             <div>
                 <div class="container">
                     <div class="hero-unit hero-unit-bordered">
-                <h1>Made in New York</h1>
+                <h1>Let's have more fun!</h1>
             </div>
         </div>
     </div>
