--- a/index.html
+++ b/index.html
@@ -22,6 +22,117 @@ tags: [Jipio, share, stuff, friends, help, others]
     <a class="control-btn fui-arrow-down" href="#"> </a>
 </section>
 
+ <!-- content-7  -->
+            <section class="content-7 v-center">
+                <div>
+
+                    <div class="container">
+                        <h3>Take a look in our awesome product</h3>
+
+                        <div class="row v-center">
+                            <div class="col-sm-3">
+                                <div>
+                                    Of course we haven’t forgotten about the responsive layout. Create a website with full mobile
+                                    support.
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="col-sm-offset-1">
+                                    <div class="screen-wrapper">
+                                        <div class="screen">
+                                            <img src="../../common-files/img/content/screen-popup.png" alt="">
+                                            <img src="../../common-files/img/content/screen.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="col-sm-offset-2">
+                                    <h6>Responsive Layout</h6>
+                                    Of course we haven’t forgotten about the responsive layout. Full mobile support.
+                                    <h6>Retina Ready</h6>
+                                    Startup Framework works fine on devices supporting Retina Display. Feel the clarity!
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- content-23  -->
+            <section class="content-23 v-center bg-midnight-blue custom-bg">
+                <div>
+                    <div class="container">
+                        <div class="hero-unit hero-unit-bordered">
+                            <h1>Scenic Nature</h1>
+                        </div>
+                    </div>
+                </div>
+                <a class="control-btn fui-arrow-down" href="#"> </a>
+            </section>
+
+            <!-- content-8  -->
+            <section class="content-8 v-center">
+                <div>
+                    <div class="container">
+                        <img src="../../common-files/img/content/img-1@2x.png" width="397" height="193" alt="">
+
+                        <h3>Take a look to our amazing Kit</h3>
+
+                        <div class="row">
+                            <div class="col-sm-6 col-sm-offset-3">
+                                <p>We have a great surprise for Designmodo fans – our first free HTML user interface kit.
+                                    Flat UI Free is made on the basis of Twitter Bootstrap in a stunning flat-style.
+                                </p>
+                                <a class="btn btn-large btn-clear" href="#">TRY IT NOW</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- content-23  -->
+            <section class="content-23  v-center bg-midnight-blue">
+                <div id="bgVideo" class="background"></div>
+                <div>
+                    <div class="container">
+                        <div class="hero-unit">
+                            <h1>Find a perfect suit for
+                            <br class="hidden-phone">
+                            your startup</h1>
+                        </div>
+                    </div>
+                </div>
+                <a class="control-btn fui-arrow-down" href="#"> </a>
+            </section>
+
+            <!-- content-8  -->
+            <section class="content-8 v-center">
+                <div>
+                    <div class="container">
+                        <img width="380" height="187" alt="" src="img/ticket-red@2x.png"/>
+                        <h3>Twenty Five Awesome Samples</h3>
+                        <div class="row">
+                            <div class="col-sm-6 col-sm-offset-3">
+                                <p>
+                                    The most important part of the Startup Framework is the samples.
+                                    The samples form a set of 25 usable pages or you can add new blocks from UI Kit.
+                                </p>
+                                <a class="btn btn-large btn-clear" href="#">TRY IT NOW</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- content-11  -->
+            <section class="content-11">
+                <div class="container">
+                    <span>You have the design, you have the code</span>
+                    <a class="btn btn-large btn-danger" href="#">TRY IT NOW</a>
+                </div>
+            </section>
+            
         <section class="content-25 bg-clouds">
             <div class="container">
                 <div class="row">
