--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Jipio
-description: "Share stuff with friends. Help others."
+description: "Together, we own it!"
 tags: [Jipio, share, stuff, friends, help, others]
 ---
 
@@ -15,7 +15,7 @@ tags: [Jipio, share, stuff, friends, help, others]
             <div>
                 <div class="container">
                     <div class="hero-unit hero-unit-bordered">
-                <h1>Share and trade with friends</h1>
+                <h1>A mobile marketplace, but better.</h1>
             </div>
         </div>
     </div>
@@ -27,13 +27,12 @@ tags: [Jipio, share, stuff, friends, help, others]
                 <div>
 
                     <div class="container">
-                        <h3>Take a look in our awesome product</h3>
+                        <h3>Jipio is a mobile marktplace to share and trade with friends</h3>
 
                         <div class="row v-center">
                             <div class="col-sm-3">
                                 <div>
-                                    Of course we haven’t forgotten about the responsive layout. Create a website with full mobile
-                                    support.
+                                    Trade and share with people you trust. Jipio lets you set the privacy of your item, choose to share with friends or with friends of friends.
                                 </div>
                             </div>
                             <div class="col-sm-4">
