--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ tags: [Jipio, share, stuff, friends, help, others]
 </section>
 
 <section class="content-23 v-center bg-midnight-blue">
+    <img src="{{site.assets}}common-files/icons/Infinity-Loop@2x.png" width="50" height="50" alt=""><span>
     <div>
         <div class="container">
             <div class="hero-unit hero-unit-bordered">
