--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ tags: [Jipio, share, stuff, friends, help, others]
 </section>
 
 <section class="content-23 v-center bg-midnight-blue">
-    <img src="{{site.assets}}images/jipio_mobiel.jpg"><span>
-    <div>
+
+    <div style="background-image: url({{site.assets}}images/jipio_mobiel.jpg); height: 100%; width: 100%;>
         <div class="container">
             <div class="hero-unit hero-unit-bordered">
                 <h1>A mobile marketplace, but better.</h1>
