--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@ tags: [Jipio, share, stuff, friends, help, others]
 
 <section class="content-23 v-center bg-midnight-blue">
 
-    <div style="background-image: url({{site.assets}}images/jipio_mobiel.jpg); height: 100%; width: 100%;>
+    <div style="background-image: url({{site.assets}}images/jipio_mobiel.jpg); height: 100%; width: 100%; no-repeat center center fixed;
+      webkit-background-size: cover;
+      moz-background-size: cover;
+      o-background-size: cover;
+      background-size: cover;>
         <div class="container">
             <div class="hero-unit hero-unit-bordered">
                 <h1>A mobile marketplace, but better.</h1>
