--- a/index.html
+++ b/index.html
@@ -148,7 +148,12 @@ tags: [Jipio, share, stuff, friends, help, others]
         </div>
     </div>
     <div class="container">
-        <div class="row">
+            <div class="row ">
+            <div style="background-image: url({{site.assets}}images/jipio_mobiel.jpg); height: 100%; width: 100%; no-repeat center center fixed;
+      webkit-background-size: cover;
+      moz-background-size: cover;
+      o-background-size: cover;
+      background-size: cover;">
             <div class="span5 offset5">
                 <h2>Features</h2>
                 <p class="lead">The most important parts of the Startup Framework are Samples and the UI Kit that
