--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@ tags: [Jipio, share, stuff, friends, help, others]
     </div>
 </section>
 
-<section class="content-23 v-center bg-midnight-blue">
-
+<section class="content-23 v-center bg-orange">
     <div style="background-image: url({{site.assets}}images/jipio_mobiel.jpg); height: 100%; width: 100%; no-repeat center center fixed;
       webkit-background-size: cover;
       moz-background-size: cover;
       o-background-size: cover;
-      background-size: cover;>
+      background-size: cover;">
         <div class="container">
             <div class="hero-unit hero-unit-bordered">
-                <h1>A mobile marketplace, but better.</h1>
+                <h1>Made in New York</h1>
             </div>
         </div>
     </div>
-    <a class="control-btn fui-arrow-down" href="#"></a>
+    <a class="control-btn fui-arrow-down" href="#"> </a>
 </section>
 
 <section class="content-7 v-center">
@@ -62,15 +61,19 @@ tags: [Jipio, share, stuff, friends, help, others]
     </div>
 </section>
 
-<section class="content-23 v-center bg-midnight-blue custom-bg">
-    <div>
+<section class="content-23 v-center bg-orange">
+    <div style="background-image: url({{site.assets}}images/jipio_mobiel.jpg); height: 100%; width: 100%; no-repeat center center fixed;
+      webkit-background-size: cover;
+      moz-background-size: cover;
+      o-background-size: cover;
+      background-size: cover;">
         <div class="container">
             <div class="hero-unit hero-unit-bordered">
-                <h1>Scenic Nature</h1>
+                <h1>Made in New York</h1>
             </div>
         </div>
     </div>
-    <a class="control-btn fui-arrow-down" href="#"></a>
+    <a class="control-btn fui-arrow-down" href="#"> </a>
 </section>
 
 <section class="content-8 v-center">
@@ -91,17 +94,19 @@ tags: [Jipio, share, stuff, friends, help, others]
     </div>
 </section>
 
-<section class="content-23 v-center bg-midnight-blue">
-    <div id="bgVideo" class="background"></div>
-    <div>
+<section class="content-23 v-center bg-orange">
+    <div style="background-image: url({{site.assets}}images/jipio_mobiel.jpg); height: 100%; width: 100%; no-repeat center center fixed;
+      webkit-background-size: cover;
+      moz-background-size: cover;
+      o-background-size: cover;
+      background-size: cover;">
         <div class="container">
-            <div class="hero-unit">
-                <h1>Find a perfect suit for
-                    <br class="hidden-phone">your startup</h1>
+            <div class="hero-unit hero-unit-bordered">
+                <h1>Made in New York</h1>
             </div>
         </div>
     </div>
-    <a class="control-btn fui-arrow-down" href="#"></a>
+    <a class="control-btn fui-arrow-down" href="#"> </a>
 </section>
 
 <section class="content-8 v-center">
