--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ tags: [Jipio, share, stuff, friends, help, others]
     </div>
 </section>
 
-<section class="content-23 v-center bg-orange">
+<section class="content-23 v-center bg-clouds">
     <div style="background-image: url({{site.assets}}images/jipio_mobiel.jpg); height: 100%; width: 100%; no-repeat center center fixed;
       webkit-background-size: cover;
       moz-background-size: cover;
@@ -61,7 +61,7 @@ tags: [Jipio, share, stuff, friends, help, others]
     </div>
 </section>
 
-<section class="content-23 v-center bg-orange">
+<section class="content-23 v-center bg-clouds">
     <div style="background-image: url({{site.assets}}images/jipio_mobiel.jpg); height: 100%; width: 100%; no-repeat center center fixed;
       webkit-background-size: cover;
       moz-background-size: cover;
@@ -94,7 +94,7 @@ tags: [Jipio, share, stuff, friends, help, others]
     </div>
 </section>
 
-<section class="content-23 v-center bg-orange">
+<section class="content-23 v-center bg-clouds">
     <div style="background-image: url({{site.assets}}images/jipio_mobiel.jpg); height: 100%; width: 100%; no-repeat center center fixed;
       webkit-background-size: cover;
       moz-background-size: cover;
@@ -125,7 +125,7 @@ tags: [Jipio, share, stuff, friends, help, others]
     </div>
 </section>
 
-<section class="content-13 subscribe-form bg-turquoise">
+<section class="content-13 subscribe-form bg-orange">
     <div class="container">
         <div class="row">
             <form>
