--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@ tags: [Jipio, share, stuff, friends, help, others]
     <div class="container">
         <div class="row">
             <form>
-                <div class="span8">
+                <div class="col-sm-8">
                     <input type="text" placeholder="Enter your e-mail" spellcheck="false">
                 </div>
-                <div class="span4">
+                <div class="col-sm-4">
                     <button class="btn btn-large btn-primary" type="submit">
                         Subscribe now
                     </button>
@@ -142,34 +142,29 @@ tags: [Jipio, share, stuff, friends, help, others]
     </div>
 </section>
 
-  <section class="content-35">
+<section class="content-35">
     <div class="background">
         <div class="container">
             <div class="row">
-                <div class="span4">
+                <div class="col-sm-4">
                     <div></div>
                 </div>
             </div>
         </div>
     </div>
     <div class="container">
-            <div class="row ">
-            <div style="background-image: url({{site.assets}}images/jipio_mobiel.jpg); height: 100%; width: 100%; no-repeat center center fixed;
-      webkit-background-size: cover;
-      moz-background-size: cover;
-      o-background-size: cover;
-      background-size: cover;">
-            <div class="span5 offset5">
+        <div class="row">
+            <div class="col-sm-5 col-sm-offset-5">
                 <h2>Features</h2>
                 <p class="lead">The most important parts of the Startup Framework are Samples and the UI Kit that
                     includes a set of different components. The samples consist of a set of 25 pages. </p>
                 <a href="#" class="btn btn-inverse">Buy Now</a>
                 <div class="row columns">
-                    <div class="span2">
+                    <div class="col-sm-5">
                         <h3>Smart Layers</h3>
                         <p>Just put the image with your App screen inside Smart Layer and get the photo.</p>
                     </div>
-                    <div class="span2 offset1">
+                    <div class="col-sm-5 col-sm-offset-2">
                         <h3>Video Tutorials</h3>
                         <p>Video tutorials show you how to make a site from design to code. </p>
                     </div>
@@ -182,32 +177,31 @@ tags: [Jipio, share, stuff, friends, help, others]
 <section class="content-26 bg-clouds">
     <div class="container">
         <div class="row">
-            <div class="span8 offset2">
+            <div class="col-sm-8 col-sm-offset-2">
                 <h3>The Second Sneak-Peek of Startup Framework</h3>
                 <p class="lead">We’ve created the product that will help your
                     startup to look even better.</p>
             </div>
         </div>
         <div class="row features">
-            <div class="span3">
-                <img src="../../common-files/icons/Chat@2x.png" alt="" width="100" height="100">
+            <div class="col-sm-3">
+                <img src="{{site.assets}}common-files/icons/Chat@2x.png" alt="" width="100" height="100">
                 <h6>Based on Bootstrap</h6>
                 HTML layout is based on one of the common frameworks.
             </div>
-            <div class="span4 offset1">
-                <img src="../../common-files/icons/Responsive1@2x.png" alt="" width="100" height="100">
+            <div class="col-sm-4 col-sm-offset-1">
+                <img src="{{site.assets}}common-files/icons/Responsive1@2x.png" alt="" width="100" height="100">
                 <h6>HTML 5, Less, CSS 3</h6>
                 We used checked-out technologies to give the best results.
             </div>
-            <div class="span3 offset1">
-                <img src="../../common-files/icons/ps@2x.png" alt="" width="78" height="100">
+            <div class="col-sm-3 col-sm-offset-1">
+                <img src="{{site.assets}}common-files/icons/ps@2x.png" alt="" width="78" height="100">
                 <h6>Block Mode</h6>
                 You can easily combine any blocks in a variety of design projects.
             </div>
         </div>
     </div>
 </section>
-
 <section class="content-33">
     <div class="container">
         <p class="lead">Documentation is really important for a developer. Right from it you get to know the product. We tried to describe all the components and provide the set-up instructions.</p>
