--- a/index.html
+++ b/index.html
@@ -109,17 +109,27 @@ tags: [Jipio, share, stuff, friends, help, others]
     <a class="control-btn fui-arrow-down" href="#"> </a>
 </section>
 
-<section class="content-8 v-center">
-    <div>
-        <div class="container">
-            <h3>Twenty Five Awesome Samples</h3>
-            <div class="row">
-                <div class="col-sm-6 col-sm-offset-3">
-                    <p>
-                        The most important part of the Startup Framework is the samples. The samples form a set of 25 usable pages or you can add new blocks from UI Kit.
-                    </p>
-                    <a class="btn btn-large btn-clear" href="#">TRY IT NOW</a>
+<section class="content-9">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3>Documentation</h3>
+                <p>Documentation is really important for a developer. Right from it you get to know the product.
+                    We tried to describe all the components and provide the set-up instructions.
+                </p>
+                <div class="row">
+                    <div class="col-sm-6 info">
+                        <h6>User Guide</h6>
+                        You’ll get a description of each component and learn how to connect and use them.
+                    </div>
+                    <div class="col-sm-6 info">
+                        <h6>Video Tutorials</h6>
+                        Video tutorials show you how to make a web site for your startup from design to code.
+                    </div>
                 </div>
+            </div>
+            <div class="col-sm-5 col-sm-offset-1 hidden-xs">
+                <img src="{{site.assets}}common-files/icons/browser-iphone@2x.png" width="300" height="300" alt="">
             </div>
         </div>
     </div>
