--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ tags: [Jipio, share, stuff, friends, help, others]
 </section>
 
 <section class="content-23 v-center bg-clouds">
-    <div style="background-image: url({{site.assets}}images/jipio_mobiel.jpg); height: 100%; width: 100%; no-repeat center center fixed;
+    <div style="background-image: url({{site.assets}}images/johannar.jpg); height: 100%; width: 100%; no-repeat center center fixed;
       webkit-background-size: cover;
       moz-background-size: cover;
       o-background-size: cover;
@@ -95,7 +95,7 @@ tags: [Jipio, share, stuff, friends, help, others]
 </section>
 
 <section class="content-23 v-center bg-clouds">
-    <div style="background-image: url({{site.assets}}images/jipio_mobiel.jpg); height: 100%; width: 100%; no-repeat center center fixed;
+    <div style="background-image: url({{site.assets}}images/jipio_iphone.jpg); height: 100%; width: 100%; no-repeat center center fixed;
       webkit-background-size: cover;
       moz-background-size: cover;
       o-background-size: cover;
