--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ tags: [Jipio, share, stuff, friends, help, others]
 
 <section class="content-35">
     <div class="background">
-      <div style="background-image: url({{site.assets}}images/johannar.jpg); height: 100%; width: 100%; no-repeat center center fixed;
+      <div style="background-image: url({{site.assets}}images/jipio_anne.jpg); height: 100%; width: 100%; no-repeat center center fixed;
       webkit-background-size: cover;
       moz-background-size: cover;
       o-background-size: cover;
