--- a/index.html
+++ b/index.html
@@ -153,11 +153,7 @@ tags: [Jipio, share, stuff, friends, help, others]
 </section>
 
 <section class="content-35">
-          <div style="background-image: url({{site.assets}}images/jipio_anne.jpg); height: 100%; width: 100%; no-repeat center center fixed;
-      webkit-background-size: cover;
-      moz-background-size: cover;
-      o-background-size: cover;
-      background-size: cover;">
+         <div class="background">
         <div class="container">
         <div class="container">
             <div class="row">
