--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ tags: [Jipio, share, stuff, friends, help, others]
       background-size: cover;">
         <div class="container">
             <div class="hero-unit hero-unit-bordered">
-                <h1>Made in New York</h1>
+                <h1>Share and trade with friends</h1>
             </div>
         </div>
     </div>
@@ -69,7 +69,7 @@ tags: [Jipio, share, stuff, friends, help, others]
       background-size: cover;">
         <div class="container">
             <div class="hero-unit hero-unit-bordered">
-                <h1>Made in New York</h1>
+                <h1>Do more with together</h1>
             </div>
         </div>
     </div>
@@ -102,7 +102,7 @@ tags: [Jipio, share, stuff, friends, help, others]
       background-size: cover;">
         <div class="container">
             <div class="hero-unit hero-unit-bordered">
-                <h1>Made in New York</h1>
+                <h1>Available everywhere</h1>
             </div>
         </div>
     </div>
