--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ tags: [Jipio, share, stuff, friends, help, others]
                     <div class="col-sm-offset-1">
                         <div class="screen-wrapper">
                             <div class="screen">
-                                <img src="{{site.assets}}common-files/img/content/screen-popup.png" alt="">
-                                <img src="{{site.assets}}common-files/img/content/screen.png" alt="">
+                                <img src="{{site.assets}}images/jipio_login.png" alt="">
+                                <img src="{{site.assets}}images/jipio_share.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -87,7 +87,7 @@ tags: [Jipio, share, stuff, friends, help, others]
                 <div class="col-sm-6 col-sm-offset-3">
                     <p>We have a great surprise for Designmodo fans – our first free HTML user interface kit. Flat UI Free is made on the basis of Twitter Bootstrap in a stunning flat-style.
                     </p>
-                    <a class="btn btn-large btn-clear" href="#">TRY IT NOW</a>
+                    <a class="btn btn-large btn-clear" href="#">TRY JIPIO NOW!</a>
                 </div>
             </div>
         </div>
@@ -129,7 +129,7 @@ tags: [Jipio, share, stuff, friends, help, others]
                 </div>
             </div>
             <div class="col-sm-5 col-sm-offset-1 hidden-xs">
-                <img src="{{site.assets}}common-files/icons/browser-iphone@2x.png" width="300" height="300" alt="">
+                <img src="{{site.assets}}images/jipio_add.png" alt="">
             </div>
         </div>
     </div>
