--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ tags: [Jipio, share, stuff, friends, help, others]
                             <div class="screen">
                                 <img src="{{site.assets}}images/jipio_login.png" alt="">
                                 <img src="{{site.assets}}images/jipio_share.png" alt="">
+                                <BR></BR>
                             </div>
                         </div>
                     </div>
@@ -79,7 +80,7 @@ tags: [Jipio, share, stuff, friends, help, others]
 <section class="content-8 v-center">
     <div>
         <div class="container">
-            <img src="{{site.assets}}common-files/img/content/img-1@2x.png" width="397" height="193" alt="">
+            <img src="{{site.assets}}images/jipio_share.png" alt="">
 
             <h3>Take a look to our amazing Kit</h3>
 
