--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 ---
 layout: page
 title: Jipio
-description: "Together, we own it!"
-tags: [Jipio, share, stuff, friends, help, others]
+description: "We own it"
+tags: [Jipio, sharing, economy, collaborative consumption, use, together, share, stuff, friends, help, others]
 ---
 
 <section class="content-33">
     <div class="container">
-        <p class="lead">Jipio is an app that lets you share and trade your stuff with friends. Together, we own it.</p>
-    </div>
+        <p class="lead">Share and trade stuff with friends. Together we own it.
 </section>
 
 <section class="content-23 v-center bg-clouds">
@@ -43,8 +42,6 @@ tags: [Jipio, share, stuff, friends, help, others]
                         <div class="screen-wrapper">
                             <div class="screen">
                                 <img src="{{site.assets}}images/jipio_login.png" alt="">
-                                <img src="{{site.assets}}images/jipio_share.png" alt="">
-                                <BR></BR>
                             </div>
                         </div>
                     </div>
