--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
                         <div class="screen-wrapper">
                             <div class="screen">
                                 <img src="{{site.assets}}images/jipio_login.png" alt="">
+                                <img src="{{site.assets}}images/jipio_login.png" alt="">
                             </div>
                         </div>
                     </div>
