--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
 <section class="content-8 v-center">
     <div>
         <div class="container">
-            <img src="{{site.assets}}images/jipio_share.png" alt="">
+            <img src="{{site.assets}}images/jipio_search.png" alt="">
 
-            <h3>Take a look to our amazing Kit</h3>
+            <h3>Search and find what you need</h3>
 
             <div class="row">
                 <div class="col-sm-6 col-sm-offset-3">
-                    <p>We have a great surprise for Designmodo fans – our first free HTML user interface kit. Flat UI Free is made on the basis of Twitter Bootstrap in a stunning flat-style.
+                    <p>Search on keyword, category or have a look at what your friends have to offer. Cannot find what you're looking for, send out a request.
                     </p>
                     <a class="btn btn-large btn-clear" href="#">TRY JIPIO NOW!</a>
                 </div>
