--- a/index.html
+++ b/index.html
@@ -194,17 +194,17 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
         </div>
         <div class="row features">
             <div class="col-sm-3">
-                <img src="{{site.assets}}common-files/icons/Chat@2x.png" alt="" width="100" height="100">
+                <img src="{{site.assets}}images/itunesartwork_2x" alt="" width="100" height="100">
                 <h6>Based on Bootstrap</h6>
                 HTML layout is based on one of the common frameworks.
             </div>
             <div class="col-sm-4 col-sm-offset-1">
-                <img src="{{site.assets}}common-files/icons/Responsive1@2x.png" alt="" width="100" height="100">
+                <img src="{{site.assets}}images/action_2x.png" alt="" width="100" height="100">
                 <h6>HTML 5, Less, CSS 3</h6>
                 We used checked-out technologies to give the best results.
             </div>
             <div class="col-sm-3 col-sm-offset-1">
-                <img src="{{site.assets}}common-files/icons/ps@2x.png" alt="" width="78" height="100">
+                <img src="{{site.assets}}images/Calendar2x.png" alt="" width="100" height="100">
                 <h6>Block Mode</h6>
                 You can easily combine any blocks in a variety of design projects.
             </div>
